coba nambahin js

--- a/index.html
+++ b/index.html
@@ -44,11 +44,7 @@
 
       <section class="w-[80vw] px-[10px] mx-auto">
         <h2 class="text-[20px] font-bold">History</h2>
-        <ul class="bg-white p-[10px] rounded-md">
-            <li id="riwayat">Ringkasan 1</li>
-            <li>Ringkasan 2</li>
-            <li>Ringkasan 3</li>
-        </ul>
+        <ul id="riwayat" class="list-disc list-inside bg-white p-[10px] rounded-md text-black"></ul>
       </section>
 </body>
 </html>
